# illuminate-v2

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  deploy.sh  start_backend.sh  start_frontend.sh
api/: .gitignore  Dockerfile  README.md  env.example  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/api/v1/: calc_zone_routers.py  calculation_routers.py  defaults.py  efficacy_routers.py  lamp_routers.py  lamp_session_routers.py  project_routers.py  resource_limits.py  room_lamps_routers.py  room_router_old.py  room_routers.py  schemas.py  session_core.py  session_helpers.py  session_manager.py  session_routers.py  session_schemas.py  simulation_routers.py  utility_routers.py  zone_session_routers.py
api/api/v1/utils/: __init__.py  plotting.py
api/app/: logging_config.py  main.py
api/app/utility/: room_storage.py
api/app/utility/storage/: rooms.json
api/scripts/: export_openapi.py
api/tests/: conftest.py  test_client_ids.py  test_efficacy.py  test_error_detail.py  test_file_uploads.py  test_integration_workflows.py  test_lamps_catalog.py  test_reflectance.py  test_resource_limits.py  test_safety.py  test_save_load_export.py  test_session_extended_crud.py  test_session_lamp_info.py  test_session_lifecycle.py  test_session_lock.py  test_session_status.py  test_session_workflow.py  test_utility.py
desktop/: build.py  illuminate.spec  installer.iss  main.py  requirements.txt
e2e/: fixtures.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: changelog.sh  (+3 more)
(+251 files in other folders)
