[project]
name = "illuminate-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "guv-calcs==0.7.0",
    "photompy==0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
guv-calcs = { path = "../../guv-calcs", editable = true }
photompy = { path = "../../photompy", editable = true }
